--- a/ustra-ui/src/Css/ProductList.css
+++ b/ustra-ui/src/Css/ProductList.css
@@ -5,7 +5,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.164);
     margin: 1rem;
     padding: 1rem;
-    height: 15rem;
+    max-height: 18rem;
     display: flex;
 }
 
@@ -82,4 +82,123 @@
 .button:active{
     transform: translateY(2px) scale(.98);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.315);
+}
+
+.bottom_wrapper{
+    display: flex;
+    border: 1px solid rgba(0, 0, 0, 0.082);
+    padding: 1rem;
+    background-color: rgb(247, 247, 247);
+}
+
+.dropdown{
+    display: inline-block;
+    min-width: 70%;
+}
+
+.drop_show{
+    display: inline-block;
+}
+
+.drop_show span{
+    display: inline-block;
+    font-size: 1.3rem;
+    font-weight: 300;
+    padding: 1rem 1rem;
+}
+
+
+/* Dropdown */
+
+.dropdown_label {
+    display: inline-block;
+    position: relative;
+  }
+  
+  .dd-button {
+    display: inline-block;
+    border: 1px solid gray;
+    border-radius: 4px;
+    padding: 1rem 1.5rem;
+    background-color: #ffffff;
+    cursor: pointer;
+    white-space: nowrap;
+  }
+  
+  /* .dd-button:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid black;
+  } */
+  
+  .dd-button:hover {
+    background-color: #eeeeee;
+  }
+  
+  
+  .dd-input {
+    display: none;
+  }
+  
+  .dd-menu {
+    position: absolute;
+    top: -36rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 0;
+    margin: 2px 0 0 0;
+    box-shadow: 0 0 6px 0 rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    list-style-type: none;
+  }
+  
+  .dd-input + .dd-menu {
+    display: none;
+  } 
+  
+  .dd-input:checked + .dd-menu {
+    display: block;
+  } 
+  
+  .dd-menu li {
+    padding: 10px 20px;
+    cursor: pointer;
+    white-space: nowrap;
+  }
+  
+  .dd-menu li:hover {
+    background-color: #f6f6f6;
+  }
+  
+
+  .link{
+      text-decoration: none;
+      color: rgb(59, 59, 59);
+  }
+    
+
+.view_wrapper{
+    display: inline-block;
+    min-width: 30%;
+    text-align: center;
+    border-left: 1px solid rgba(0, 0, 0, 0.082);
+}
+
+.view{
+    border: none;
+    padding: 1rem 1.5rem;
+    border-radius: 2px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(68, 68, 68);
+}
+
+.view:focus{
+    outline: none;
 }
