--- a/ustra-ui/src/Css/ScrollOption.css
+++ b/ustra-ui/src/Css/ScrollOption.css
@@ -6,18 +6,31 @@
     overflow-y: hidden;
 }
 
+.Scroll__box::-webkit-scrollbar {
+    width: 5px;
+  }
+
+.Scroll__box::-webkit-scrollbar-track {
+    border-radius: 1rem;
+}
+ 
+.Scroll__box::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 1rem;
+}
+
+
 .Scroll__cat,
 .Scroll__cat:link{
     text-decoration: none;
     height: 7rem;
     margin: 1rem;
     min-width: 11rem;
-    border-radius: .2rem;
+    border-radius: .5rem;
     background-color: rgba(0, 0, 0, 0.171);
     padding: 2.5rem 1rem 1rem 1rem;
     text-align: center;
     background-size: cover;
-
     font-size: 1.3rem;
     color: white;
     font-weight: 300;
@@ -26,3 +39,40 @@
 .selected{
     color: wheat;
 }
+
+@media only screen and (min-width: 450px) {
+    .Scroll__cat,
+.Scroll__cat:link{
+      height: 7.5rem;
+      min-width: 11.5rem;
+      font-size: 1.4rem;
+    }
+  }
+
+
+  @media only screen and (min-width: 600px) {
+    .Scroll__cat,
+.Scroll__cat:link{
+    height: 8rem;
+    min-width: 12rem;
+    font-size: 1.5rem;
+    }
+  }
+
+  @media only screen and (min-width: 750px) {
+    .Scroll__cat,
+.Scroll__cat:link{
+    height: 8.5rem;
+    min-width: 12.5rem;
+    font-size: 1.6rem;
+    }
+  }
+
+  @media only screen and (min-width: 900px) {
+    .Scroll__cat,
+.Scroll__cat:link{
+    height: 9rem;
+    min-width: 13rem;
+    font-size: 1.7rem;
+    }
+  }
