--- a/ustra-ui/src/Css/ScrollOption.css
+++ b/ustra-ui/src/Css/ScrollOption.css
@@ -37,10 +37,16 @@
 }
 
 .selected{
-    color: wheat;
+    color: rgb(240, 240, 240);
+    border: 5px solid rgb(78, 194, 0);
 }
 
 @media only screen and (min-width: 450px) {
+
+  .Scroll__box{
+    max-height: 13rem;
+  }
+
     .Scroll__cat,
 .Scroll__cat:link{
       height: 7.5rem;
@@ -51,6 +57,11 @@
 
 
   @media only screen and (min-width: 600px) {
+
+    .Scroll__box{
+      max-height: 14rem;
+    }
+
     .Scroll__cat,
 .Scroll__cat:link{
     height: 8rem;
@@ -60,6 +71,9 @@
   }
 
   @media only screen and (min-width: 750px) {
+    .Scroll__box{
+      max-height: 15rem;
+    }
     .Scroll__cat,
 .Scroll__cat:link{
     height: 8.5rem;
@@ -69,10 +83,13 @@
   }
 
   @media only screen and (min-width: 900px) {
+    .Scroll__box{
+      max-height: 16rem;
+    }
     .Scroll__cat,
 .Scroll__cat:link{
     height: 9rem;
     min-width: 13rem;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     }
   }
